Extra feedback verwerkt

--- a/book/basics/concrete/material_characteristics_concrete.ipynb
+++ b/book/basics/concrete/material_characteristics_concrete.ipynb
@@ -135,15 +135,15 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Colors\n",
+    "## Colors\n",
     "grey = '#eeeeee' # light grey fill\n",
     "\n",
-    "## Prepare all the graphs that are to be plotted\n",
-    "# Define the range of densities to plot\n",
+    "### Prepare all the graphs that are to be plotted\n",
+    "#### Define the range of densities to plot\n",
     "range_elements = np.arange(0, 11, 1)\n",
     "n_element = np.max(range_elements)\n",
     "\n",
-    "## Create plot\n",
+    "### Create plot\n",
     "fig = go.Figure()\n",
     "\n",
     "base_traces = 0 # Number of traces that are always visible\n",
@@ -162,7 +162,7 @@
     "\n",
     "f_ck_array = np.array([12, 20, 30, 35, 45, 50, 55, 60, 70, 80, 90])\n",
     "\n",
-    "# Add traces, one for each slider step\n",
+    "## Add traces, one for each slider step\n",
     "for i in range_elements: \n",
     "    f_ck = np.array([0, f_ck_array[i], f_ck_array[i]])\n",
     "    f_cd = f_ck/1.5\n",
@@ -188,13 +188,13 @@
     "\n",
     "traces_per_step = 2 # Number of traces per value of i\n",
     "\n",
-    "# Show the traces for one value of a when loading the plot (initial setup)\n",
+    "## Show the traces for one value of a when loading the plot (initial setup)\n",
     "active_a_index = 1\n",
     "for i in range(traces_per_step):\n",
     "    curr_idx = int(base_traces + active_a_index*traces_per_step + i)\n",
     "    fig.data[curr_idx].visible = True\n",
     "\n",
-    "# Create and add slider\n",
+    "## Create and add slider\n",
     "steps = []\n",
     "for i in range(0, range_elements.shape[0]):\n",
     "    visarray = [False] * len(fig.data)\n",
