--- a/book/calculation_examples/LCA/TSCT.ipynb
+++ b/book/calculation_examples/LCA/TSCT.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# The Structural Carbon Tool\n",
     "\n",
+    "```{Note}\n",
+    "This tool was obtained from the [The Institution of Structural Engineers](https://www.istructe.org/resources/guidance/the-structural-carbon-tool/). All credits go them for developing this tool.\n",
+    "```\n",
+    "\n",
     "Calculating embodied carbon in the same rigorous way across all designs will allow meaningful comparisons to be made between structural schemes, developing our understanding of embodied carbon as well as how the industry can most effectively reach net zero carbon. This guidance is equally applicable to infrastructure and building projects. The calculation of embodied carbon must become a key part of every design process. Such efforts support the immediate need to reduce resource demand and increase reuse and recycling to enable a circular economy. \n",
     "\n",
     "This guidance will:\n",
